gitops/apps/lighttheham/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: lighttheham
  namespace: lighttheham
spec:
  endpointSelector:
    matchLabels:
      app: lighttheham
  ingress:
    # Allow traffic from Cloudflare tunnel only
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cloudflare
  egress:
    # Allow DNS
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    # Allow Garage S3 (Litestream backup)
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: garage
      toPorts:
        - ports:
            - port: "3900"
              protocol: TCP
    # Allow external HTTPS (Google APIs, OAuth providers)
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "80"
              protocol: TCP
